--- a/tex/chapter03.tex
+++ b/tex/chapter03.tex
@@ -4,5 +4,5 @@
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
-\chapter{5G Cloud RAN中的负载均衡}
+\chapter{}
 \label{chap:LB}
