--- a/thesis.tex
+++ b/thesis.tex
@@ -17,6 +17,7 @@
 \usepackage{array}% http://ctan.org/pkg/array
 \usepackage{longtable}
 \usepackage{import}
+\usepackage{enumitem}
 %\usepackage{subcaption}
 %\usepackage{algorithmic}
 \DeclareMathOperator*{\argmax}{arg\,max}
