--- a/tex/chapter01.tex
+++ b/tex/chapter01.tex
@@ -7,26 +7,19 @@
 \chapter{绪论}
 \label{chap:Intro}
 \section{研究背景与意义}
-随着单机纵向扩展的难度越来越大、价格越来越昂贵，企业用户对横向扩展架构越来越青睐。由大量价格低廉的普通机器组成的分布式系统满足了海量数据处理、机器学习等任务的资源需求，逐渐成为工业界和学术界关注的重点。然而，分布式系统对系统软件的开发者提出了新的挑战。例如，如果一个应用程序想要运行在MapReduce\cite{MapReduce}的分布式平台之上，则必须调用MapReduce框架的接口，甚至修改其内部逻辑。这将会带来很大的工作量，削弱分布式平台的优势。巨型虚拟机（Giant Virtual Machine）\cite{giantvm}解决了现有程序和分布式系统的兼容问题，它向上层应用提供了单一操作系统镜像，将分布式系统抽象为单一的虚拟机平台，使得现有软件无需修改即可运行在分布式系统之上。虽然巨型虚拟机极大的提高了开发者使用分布式平台的便利性，分布式系统的平均资源使用率偏低的问题依然没有得到解决。从阿里巴巴等技术企业提供的数据来看，数据中心的平均CPU使用率维持在30\%左右，不超过40\%\footnote{不进行任务混部，则仅有20\%的CPU利用率，详见https://102.alibaba.com/detail/?id=61}。
+随着单机纵向扩展的难度越来越大、价格越来越昂贵，企业用户对横向扩展架构越来越青睐。由大量价格低廉的普通机器组成的分布式系统满足了海量数据处理、机器学习等任务的资源需求，逐渐成为工业界和学术界关注的重点。然而，分布式系统对系统软件的开发者提出了新的挑战。例如，如果一个应用程序想要运行在MapReduce\cite{MapReduce}的分布式平台之上，则必须调用MapReduce框架的接口，甚至修改其内部逻辑。这将会带来很大的工作量，削弱分布式平台的优势。巨型虚拟机（Giant Virtual Machine）\cite{giantvm}解决了现有程序和分布式系统的兼容问题，它向上层应用提供了单一操作系统镜像，使得现有软件无需修改即可运行在分布式系统之上。虽然巨型虚拟机极大的提高了开发者使用分布式平台的便利性，分布式系统的平均资源使用率偏低的问题依然没有得到解决。从阿里巴巴等技术企业提供的数据来看，数据中心的平均CPU使用率维持在30\%左右，不超过40\%\footnote{不进行任务混部，则仅有20\%的CPU利用率，详见https://102.alibaba.com/detail/?id=61}。
 
-提高分布式系统中资源使用率的一般方法是，将任务分类为时延敏感型任务（Latency Critical，LC）和尽力而为型任务（Best Effort，BE）。为了保证服务质量（Quality of Service，QoS），时延敏感型任务对资源的要求十分苛刻，不可与其他任务混部，调度器为其提供足够的资源。可以将大量BE型任务混部，提高资源利用率。然而，这会导致BE型任务的服务质量严重下降，而时延敏感型任务偶尔占用大量资源，而大多数时间占用资源少，使得资源的平均占用率无法提高。为了进一步提高资源平均使用率，分布式系统的任务调度器应该动态地感知系统中各个进程的资源使用量，尽可能地将资源紧缺节点上的任务迁移到资源富余的节点上去，从而保证将资源紧缺节点上任务的服务质量，同时充分利用资源富余节点上的资源。目前实现迁移的方式有进程级迁移（process migration），但由于进程和操作系统共享了内存等资源，遇到了残余依赖（residual dependencies）\cite{residual}的问题；由于虚拟机迁移涉及整个操作系统的状态迁移，虚拟机在线迁移（VM Live Migration）\cite{livemigration}则会造成巨大的网络开销，也会造成客户机对外提供服务的暂时性中止。
+提高分布式系统中资源使用率的一般方法是，将时延敏感型任务（Latency Critical，LC）和尽力而为型任务（Best Effort，BE）进行混部（Colocation）。为了保证服务质量（Quality of Service，QoS），时延敏感型任务对资源的要求十分苛刻，不可与其他时延敏感型任务混部，调度器为其提供足够的资源。可以将多个BE型任务与较少的LC型任务混部，提高资源利用率。然而，由于工作负载的动态变化，为LC型任务提供的资源无法被充分利用，而迁移可以动态感知工作负载。目前实现迁移的方式有进程级迁移（process migration），但由于进程和操作系统数据共享，有残余依赖（residual dependencies）\cite{residual}的问题；由于虚拟机迁移涉及整个操作系统的状态迁移，虚拟机在线迁移（VM Live Migration）\cite{livemigration}则会造成巨大的网络开销，也会造成客户机对外提供服务的暂时性中止。
 
-而巨型虚拟机将分布式系统抽象为简单的单一的客户机操作系统，而通过向客户机操作系统暴露非一致性共享内存的硬件架构，使得客户机操作系统得知底层分布式系统的拓扑结构。在隐藏分布式软件框架复杂性的同时，巨型虚拟机也隐藏了分布式系统之间迁移的复杂性，即可以仅仅通过调度客户机内部进程完成集群之间的任务调度。本文通过编写操作系统内的调度脚本，实现了集群节点间的负载均衡，在提高集群总体CPU使用率的同时，满足集群中LC型任务的QoS要求。为了进一步减小集群间任务调度的网络开销和提高集群CPU使用率的效果，本文利用Google trace\footnote{谷歌Borg集群29天内获得的任务调度与资源用量数据：https://github.com/google/cluster-data}对分布式集群进行仿真，模拟各类调度策略，研究了不同调度算法以及调度参数对集群性能、网络开销的影响。
+而巨型虚拟机将分布式系统抽象为简单的单一的客户机操作系统，在隐藏分布式软件框架复杂性的同时，巨型虚拟机也隐藏了分布式系统之间迁移的复杂性，即可以仅仅通过调度客户机内部进程完成集群之间的任务调度。本文通过编写操作系统内的调度脚本，动态感知工作负载，实现了集群节点间的负载均衡，在提高集群总体CPU使用率的同时，满足集群中LC型任务的QoS要求。为了进一步减小集群间任务调度的网络开销和提高集群CPU使用率的效果，本文利用Google trace\footnote{谷歌Borg集群29天内获得的任务调度与资源用量数据：https://github.com/google/cluster-data}对分布式集群进行仿真，模拟各类调度策略，研究了不同调度算法以及调度参数对集群性能、网络开销的影响。
 
 \section{研究现状}
-在分布式集群的调度策略方面，Mesos\cite{mesos}通过细粒度的资源共享提高了集群的资源使用率，然而由于现今的分布式框架都自带有极其复杂的调度器，会彼此产生影响，故Mesos设计了一个双层调度器，在各个分布式框架之间进行调度，使得各个框架达到接近最优的数据局部性（data locality）。Omega\cite{omega}是谷歌的集群管理系统，其核心是一个共享状态、无锁的并行程序调度器，使得调度器的延迟大大下降，相比于集中式的集群调度器更好地应对了集群中任务对资源需求的极速变化。随着数据处理任务的并行度越来越高，延迟要求越来越高，Sparrow\cite{sparrow}提出了一个分布式的、细粒度的调度器，解决了集中式采样系统所造成的吞吐量下降、延迟提高的问题。Graphene\cite{graphene}关注的是分布式系统中任务之间的依赖关系，以及多元化的资源需求。在并行数据处理系统中，任务之间的DAG（directed acyclic graph，依赖关系网）是调度器作出调度决策时所需要关注的主要信息。Graphene则在任务运行时计算出任务之间的DAG，对未来的调度策略进行改进。本文的实现依赖于巨型虚拟机，它通过系统虚拟化的方式将分布式系统的复杂性屏蔽，在减轻上层软件编写者负担的同时，也隐藏了诸多优化的可能性。通过修改巨型虚拟机监控器的代码来完成集群调度的优化则是一项相当复杂的工作，不是一个好的选项。
+\label{chap:dissch}
+在分布式集群的调度策略方面，Mesos\cite{mesos}通过细粒度的资源共享提高了集群的资源使用率，然而由于现今的分布式框架都自带有极其复杂的调度器，会彼此产生影响，故Mesos设计了一个双层调度器，在各个分布式框架之间进行调度，使得各个框架达到接近最优的数据局部性（data locality）。Omega\cite{omega}是谷歌的集群管理系统，其核心是一个共享状态、无锁的并行程序调度器，使得调度器的延迟大大下降，相比于集中式的集群调度器更好地应对了集群中任务对资源需求的极速变化。随着数据处理任务的并行度越来越高，延迟要求越来越高，Sparrow\cite{sparrow}提出了一个分布式的、细粒度的调度器，解决了集中式采样系统所造成的吞吐量下降、延迟提高的问题。Graphene\cite{graphene}关注的是分布式系统中任务之间的依赖关系，以及多元化的资源需求。在并行数据处理系统中，任务之间的DAG（directed acyclic graph，依赖关系网）是调度器作出调度决策时所需要关注的主要信息。Graphene则在任务运行时计算出任务之间的DAG，对未来的调度策略进行改进。
 
 \section{本文工作}
 Steal time指vCPU（虚拟机CPU）运行过程中等待物理CPU上其他任务所占的时间。本文将巨型虚拟机部署在有四个节点的分布式集群上，将BE型任务（可迁移任务）运行在客户机中，同时将LC型任务与巨型虚拟机混部，通过读取客户机中的steal time计算宿主机上的工作负载，选取巨型虚拟机中steal time最低的NUMA node（非一致性共享内存节点），将虚拟机中所有的BE型任务迁移到该node上，从而提高了集群总体的CPU使用率，也保证了集群中任务的QoS。本文还利用Google trace中clusterdata2011-2的task-uasge和task-event数据，模拟了一个由800台相同机器组成的分布式集群，使用Python脚本读取数据并模拟了调度过程，设计并测试了各种调度策略的效果。模拟的调度策略有：
-\begin{itemize}
-  \item 根据CPU占用率调整任务在不同节点上的分布进行调度。其中需要考虑的参数有：每个巨型虚拟机拥有节点的个数、触发进程迁移的CPU 临界值（CPU threshold）。每个巨型虚拟机占用的节点越少、CPU占用率的临界值越低，该调度策略就越激进，网络带宽的占用也越大。
-  \item 在考虑CPU占用率的基础上同时考虑Memory占用率。设置一个内存占用量的临界值（Memory usage threshold），只有在此临界值之下的进程才算作可迁移进程。进程占用的内存越小，网络开销也越小。
-\end{itemize}
+
 
 \section{本文结构}
 本文将按如下形式进行叙述：
-\begin{itemize}
-  \item 第二章介绍和本文有关的背景知识，包括虚拟化技术、巨型虚拟机的架构，以及巨型虚拟机中DSM组件与NUMA的相似性，为后文减小巨型虚拟机任务迁移的开销所做的工作做铺垫。
-  \item 第三章介绍巨型虚拟机中任务调度器的实现，通过动态感知宿主机工作负载进行虚拟机中的任务调度，从而达到提高分布式系统资源使用率的目的，优化集群的任务调度。
-  \item 第四章
-\end{itemize}
