--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -434,3 +434,48 @@
   biburl    = {https://dblp.org/rec/conf/icdcs/NadgowdaSBI17.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{parallelm,
+  author    = {Xiang Song and
+               Jicheng Shi and
+               Ran Liu and
+               Jian Yang and
+               Haibo Chen},
+  editor    = {Steve Muir and
+               Gernot Heiser and
+               Steve Blackburn},
+  title     = {Parallelizing live migration of virtual machines},
+  booktitle = {{ACM} {SIGPLAN/SIGOPS} International Conference on Virtual Execution
+               Environments (co-located with {ASPLOS} 2013), {VEE} '13, Houston,
+               TX, USA, March 16-17, 2013},
+  pages     = {85--96},
+  publisher = {{ACM}},
+  year      = {2013},
+  url       = {https://doi.org/10.1145/2451512.2451531},
+  doi       = {10.1145/2451512.2451531},
+  timestamp = {Tue, 06 Nov 2018 11:06:43 +0100},
+  biburl    = {https://dblp.org/rec/conf/vee/SongSLYC13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{compression,
+  author    = {Petter Sv{\"{a}}rd and
+               Benoit Hudzia and
+               Johan Tordsson and
+               Erik Elmroth},
+  editor    = {Erez Petrank and
+               Doug Lea},
+  title     = {Evaluation of delta compression techniques for efficient live migration
+               of large virtual machines},
+  booktitle = {Proceedings of the 7th International Conference on Virtual Execution
+               Environments, {VEE} 2011, Newport Beach, CA, USA, March 9-11, 2011
+               (co-located with {ASPLOS} 2011)},
+  pages     = {111--120},
+  publisher = {{ACM}},
+  year      = {2011},
+  url       = {https://doi.org/10.1145/1952682.1952698},
+  doi       = {10.1145/1952682.1952698},
+  timestamp = {Tue, 06 Nov 2018 11:06:43 +0100},
+  biburl    = {https://dblp.org/rec/conf/vee/SvardHTE11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
